# ml-model

./: .gitignore  pyproject.toml
src/: main.py
src/app/: main.py
src/app/api/v1/: __init__.py
src/app/api/v1/endpoints/: ml.py
src/model/: entities.py  exceptions.py  interface.py  ml_model.py
